[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/UI/GameHUD/GameHUD.gd" type="Script" id=1]
[ext_resource path="res://Fonts/OpenSans.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[node name="GameHUD" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PausePanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -120.0
margin_right = 120.0
margin_bottom = 120.0

[node name="Label" type="Label" parent="PausePanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -55.0
margin_top = 8.0
margin_right = 55.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 1 )
text = "Paused"

[node name="Buttons" type="VBoxContainer" parent="PausePanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_top = 64.0
margin_right = 100.0
margin_bottom = 204.0
custom_constants/separation = 10

[node name="ResumeButton" type="Button" parent="PausePanel/Buttons"]
margin_right = 200.0
margin_bottom = 40.0
focus_neighbour_bottom = NodePath("../RestartButton")
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="RestartButton" type="Button" parent="PausePanel/Buttons"]
margin_top = 50.0
margin_right = 200.0
margin_bottom = 90.0
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../QuitButton")
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="QuitButton" type="Button" parent="PausePanel/Buttons"]
margin_top = 100.0
margin_right = 200.0
margin_bottom = 140.0
focus_neighbour_top = NodePath("../RestartButton")
custom_fonts/font = SubResource( 2 )
text = "Quit"

[connection signal="pressed" from="PausePanel/Buttons/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PausePanel/Buttons/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PausePanel/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
